--- a/tensorflow_exercise.ipynb
+++ b/tensorflow_exercise.ipynb
@@ -6,8 +6,7 @@
       "name": "tensorflow-exercise.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMKTN5PSFOLKiNe0OvakXD2",
+      "authorship_tag": "ABX9TyNyjUV9RU55M5kKxHxN5hIu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +39,7 @@
       "source": [
         "pip install tensorflow-gpu==2.0.0-rc1"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +93,7 @@
         "import numpy as np\n",
         "import tensorflow as tf"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +112,7 @@
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
         "x_train, x_test = x_train / 255.0, x_test / 255.0"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +151,7 @@
         "\n",
         "model.evaluate(x_test,  y_test, verbose=2)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -187,6 +186,54 @@
           "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q7VUk7Kgp89j",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# keras builds models from layers.\n",
+        "# here we use the sequential model.\n",
+        "\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "model = tf.keras.Sequential()\n",
+        "\n",
+        "# add a 64-unit dense layer (fully-connected layer)\n",
+        "model.add(layers.Dense(64, activation='relu'))\n",
+        "\n",
+        "# and another one\n",
+        "model.add(layers.Dense(64, activation='relu'))\n",
+        "\n",
+        "# and a softmax layer with 10 output units\n",
+        "model.add(layers.Dense(10, activation='softmax'))\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CoCJNZgtsV5E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# training the model\n",
+        "model.compile(optimizer=tf.keras.optimizers.Adam(0.001),\n",
+        "              loss='categorical_crossentropy',\n",
+        "              metrics=['accuracy'])\n",
+        "\n",
+        "# optimizer: detemines the method of training; Adam, SGD, etc. can use string e.g. 'adam'\n",
+        "# loss: loss function; mse, categorical_crossentropy, binary_crossentropy, etc. (objects under tf.keras.losses)\n",
+        "# metrics: used for monitioring the training; use objects under tf.keras.metrics"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
