--- a/tensorflow_exercise.ipynb
+++ b/tensorflow_exercise.ipynb
@@ -6,7 +6,8 @@
       "name": "tensorflow-exercise.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNyjUV9RU55M5kKxHxN5hIu",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNv2A8V4OGP/eVevQvSXA0U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -234,6 +235,75 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I_qL5P88aiJT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 395
+        },
+        "outputId": "82427c31-bbdd-483e-939c-c6bb468d6d9c"
+      },
+      "source": [
+        "data = np.random.random((1000, 32))\n",
+        "labels = np.random.random((1000, 10))\n",
+        "# generate random data & label sets\n",
+        "\n",
+        "val_data = np.random.random((100, 32))\n",
+        "val_labels = np.random.random((100, 10))\n",
+        "# generate random data & label sets (for validation)\n",
+        "\n",
+        "model.fit(data, labels, epochs=10, batch_size=32,\n",
+        "          validation_data=(val_data, val_labels))\n",
+        "\n",
+        "# epochs: one cycle of the entire input dataset\n",
+        "# batch_size: the size of 'batches' that the model cycles through in each epoch\n",
+        "# validation_data: tuple of data & labels that are used for validation"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "32/32 [==============================] - 0s 6ms/step - loss: 12.4271 - accuracy: 0.0940 - val_loss: 13.7931 - val_accuracy: 0.0400\n",
+            "Epoch 2/10\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 18.8223 - accuracy: 0.0940 - val_loss: 26.0218 - val_accuracy: 0.0800\n",
+            "Epoch 3/10\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 36.1488 - accuracy: 0.1000 - val_loss: 46.5058 - val_accuracy: 0.0600\n",
+            "Epoch 4/10\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 56.5400 - accuracy: 0.0960 - val_loss: 63.7573 - val_accuracy: 0.0700\n",
+            "Epoch 5/10\n",
+            "32/32 [==============================] - 0s 5ms/step - loss: 74.4487 - accuracy: 0.0930 - val_loss: 85.8110 - val_accuracy: 0.0700\n",
+            "Epoch 6/10\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 100.9933 - accuracy: 0.1100 - val_loss: 121.1104 - val_accuracy: 0.0500\n",
+            "Epoch 7/10\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 138.3770 - accuracy: 0.1020 - val_loss: 157.6246 - val_accuracy: 0.1000\n",
+            "Epoch 8/10\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 174.5581 - accuracy: 0.0940 - val_loss: 196.0312 - val_accuracy: 0.1000\n",
+            "Epoch 9/10\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 212.4786 - accuracy: 0.1030 - val_loss: 232.8846 - val_accuracy: 0.0800\n",
+            "Epoch 10/10\n",
+            "32/32 [==============================] - 0s 2ms/step - loss: 250.8225 - accuracy: 0.1020 - val_loss: 269.9370 - val_accuracy: 0.0800\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7f9786402e10>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
     }
   ]
 }
